--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,11 @@ th.nobordertop{
     border-top: 0px;
     border-width: 0px;
 }
+
+.border-radius {
+	border-radius: 6px
+}
+
+.card-toko {
+	padding: 0.5rem;
+}
