--- a/assets/css/card-dashboard-pembeli.css
+++ b/assets/css/card-dashboard-pembeli.css
@@ -2,6 +2,12 @@ body {
    background: #041221;
 }
 
+.card.large {
+   height: 600px;
+   -webkit-backface-visibility: hidden;
+   backface-visibility: initial;
+   border-radius: 5px;
+}
 
 .media-content {
    overflow: hidden;
@@ -112,4 +118,13 @@ strong {
 .fa {
    color: lemonchiffon;
    margin: 10px
+}
+
+.border-radius {
+   border-radius: 0.35rem;
+}
+
+.foto-toko {
+   border-radius: 1rem;
+   padding: 0.5rem;
 }
